@@ -1,3 +1,8 @@
+2008-09-25  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 6913
+	* listing.c (print_options): Don't call fprintf without format string.
+
 2008-09-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* write.c (md_register_arithmetic): Define.
